Fixed spacing on hero copy.

--- a/main.css
+++ b/main.css
@@ -66,6 +66,7 @@ h1 {
     font-size: 28px;
     line-height: 32px;
     letter-spacing: 1.7px;
+    margin-bottom: 0px;
 }
 
 h1 span {
@@ -80,7 +81,7 @@ h2 {
     font-size: 20px;
     line-height: 32px;
     letter-spacing: 1px;
-    margin: 30px 0px;
+    margin: 16px 0px 40px 0px;
 }
 
 .button-start-here {
@@ -108,10 +109,12 @@ h2 {
     h1 {
         font-size: 55px;
         line-height: 64px;
+        margin-bottom: 0px;
     }
 
     h2 {
         font-size: 28px;
+        margin-bottom: 64px;
     }
 }
 
